--- a/src/app/layout/app.topbar.component.html
+++ b/src/app/layout/app.topbar.component.html
@@ -1,21 +1,36 @@
 <div class="layout-topbar">
     <a class="layout-topbar-logo" routerLink="">
         <img src="assets/layout/images/airplane-airport-svgrepo-com.svg" alt="logo">
-        <span>Transport BI</span>
+        <span>NextGEN</span>
     </a>
 
     <button #menubutton class="p-link layout-menu-button layout-topbar-button" (click)="layoutService.onMenuToggle()">
         <i class="pi pi-bars"></i>
     </button>
 
-    <button #topbarmenubutton class="p-link layout-topbar-menu-button layout-topbar-button"
-        (click)="layoutService.showProfileSidebar()">
+    <button #topbarmenubutton class="p-link layout-topbar-menu-button layout-topbar-button" (click)="op.toggle($event)">
         <i class="pi pi-ellipsis-v"></i>
     </button>
 
+    <p-overlayPanel #op>
+        <div class="flex flex-column gap-3 w-25rem">
+            <div class="flex align-center">
+                <p-avatar icon="pi pi-user" styleClass="mr-2" size="xlarge" shape="circle" />
+                <div class="flex flex-column gap-1">
+                    <span class="text-xl font-bold">{{user?.username}}</span>
+                    <span>{{user?.roleName}}</span>
+                </div>
+            </div>
+            <div class="flex justify-content-end">
+
+                <p-button styleClass="" label="Logout" icon="pi pi-power-off" (click)="logout()" />
+            </div>
+        </div>
+    </p-overlayPanel>
+
     <div #topbarmenu class="layout-topbar-menu"
         [ngClass]="{'layout-topbar-menu-mobile-active': layoutService.state.profileSidebarVisible}">
-        <button class="p-link layout-topbar-button">
+        <button (click)="op.toggle($event)" class="p-link layout-topbar-button">
             <i class="pi pi-user"></i>
             <span>Profile</span>
         </button>
