--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
-<div class="flex align-items-center justify-content-center h-screen">
-    <p-card header="Login" subheader="">
+<div class="flex align-items-center justify-content-center h-screen bg-primary backgroundImg">
+    <p-card header="Login" subheader="" styleClass="px-6">
         <form [formGroup]="loginForm" id="loginForm" (ngSubmit)="onSubmit()">
             <div class="flex flex-column ">
                 <span class="p-input-icon-left my-2">
@@ -25,7 +25,7 @@
         <p-divider></p-divider>
         <ng-template pTemplate="footer">
             <div class="flex align-items-center justify-content-center">
-                <button pButton type="submit" form="loginForm" label="Submit" [loading]="loading"></button>
+                <button pButton type="submit" form="loginForm" label="Login" [loading]="loading"></button>
             </div>
         </ng-template>
     </p-card>
